# panda_ros_workshop

./: .gitignore  .gitmodules  .readthedocs.yml  LICENSE  README.md
docker/: Dockerfile  docker-compose.yml  workspace-entrypoint.sh
docs/source/: conf.py  index.rst
docs/source/_source/: additional_setting.rst  moveit_commander.rst  moveit_setupassistance.rst  robot_task.rst
docs/source/_source/installation/: installation.rst
docs/source/_source/panda_setup/: drivers.rst
moveit_panda_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit_panda_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  panda.srdf  simple_moveit_controllers.yaml
moveit_panda_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
panda_controllers/: CMakeLists.txt  package.xml
panda_controllers/scripts/: ar_move.py  ar_move_rf_buffer.py  first_pick_place.py  go_to_goal.py
panda_goal_controller/: CMakeLists.txt  package.xml
panda_goal_controller/scripts/: first_pick_place.py  gripper_controller.py  sim_test_ptp.py
panda_goal_controller/src/: first_cartestion.cpp  first_pick_place.cpp  new_first_pick_place.cpp
panda_ros2_goal/: CMakeLists.txt  package.xml
panda_ros2_goal/src/: ptp_first.cpp
